Source/WebCore/platform/mediastream/ios/AVAudioSessionCaptureDeviceManager.h
@@ -57,6 +57,8 @@ public:
     void enableAllDevicesQuery();
     void disableAllDevicesQuery();
 
+    void setPreferredAudioSessionDeviceUID(const String&);
+
 private:
     AVAudioSessionCaptureDeviceManager();
     ~AVAudioSessionCaptureDeviceManager();
